# MetAll-dev

./: .gitignore  .output.txt  CMakeLists.txt  README.md  app.py  main.cu  main.nf  mock_metadata.tsv  nextflow.config  req1.txt  run_bracken_bulk.sh  run_command.txt  run_folder_gpu.sh  run_kraken.sh  style.css  terminalCommand.sh  test.json
conf/: slurm.config
include/: classifier.h  common.h  fastq_reader.h  index.h
modules/: alignment.nf  bracken.nf  decontam.nf  dge.nf  dge_analysis.nf  fastp.nf  fastqc.nf  kraken2.nf  krona.nf  multiqc.nf  parabricks.nf  preprocessing.nf  ribodetector.nf  ribodetector_Singularity.nf  salmon.nf  sortmerna.nf  trimgalore.nf  virulence.nf
src/: classifier.cu  fastq_reader.cpp  index.cu
subworkflows/: taxonomy.nf
